--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("http://fonts.cdnfonts.com/css/common-pixel");
+@import url("https://fonts.googleapis.com/css2?family=Cabin&family=Special+Elite&display=swap");
 html,
 body {
   margin: 0;
@@ -13,7 +15,7 @@ body {
 }
 
 body {
-  background-color: #7cc6fe;
+  background-color: #131e2d;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -44,6 +46,14 @@ button:focus {
 
 button svg {
   margin-right: 5px;
+}
+
+.app-header {
+  font-family: "Common Pixel", sans-serif;
+  font-size: 4rem;
+  color: #7fda7a;
+  align-items: center;
+  text-align: center;
 }
 
 .app {
@@ -81,6 +91,7 @@ button svg {
 
 .question-text {
   margin-bottom: 12px;
+  font-family: "Cabin", sans-serif;
 }
 
 .timer-text {
@@ -112,4 +123,100 @@ button svg {
   margin-top: 20px;
   padding: 10px;
   font-weight: bold;
+}
+
+.lds-roller {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-roller div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 40px 40px;
+}
+.lds-roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #fff;
+  margin: -4px 0 0 -4px;
+}
+.lds-roller div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.lds-roller div:nth-child(1):after {
+  top: 63px;
+  left: 63px;
+}
+.lds-roller div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.lds-roller div:nth-child(2):after {
+  top: 68px;
+  left: 56px;
+}
+.lds-roller div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.lds-roller div:nth-child(3):after {
+  top: 71px;
+  left: 48px;
+}
+.lds-roller div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.lds-roller div:nth-child(4):after {
+  top: 72px;
+  left: 40px;
+}
+.lds-roller div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.lds-roller div:nth-child(5):after {
+  top: 71px;
+  left: 32px;
+}
+.lds-roller div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.lds-roller div:nth-child(6):after {
+  top: 68px;
+  left: 24px;
+}
+.lds-roller div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.lds-roller div:nth-child(7):after {
+  top: 63px;
+  left: 17px;
+}
+.lds-roller div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+.lds-roller div:nth-child(8):after {
+  top: 56px;
+  left: 12px;
+}
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loader-parent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 450px) {
+  .app {
+    width: 100%;
+    padding: 10px;
+  }
 }
